[tool.poetry]
name = "pytorch-image-models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pytorch_image_models"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.0"
torchvision = "0.14.0"
pyyaml = "^6.0"
huggingface-hub = "^0.14.1"
safetensors = ">=0.2"
pandas = "^2.0.1"
grad-cam = "^1.4.6"
torchcam = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
